--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <script>
     // لینک داده‌ها از Google Sheets (توضیحش در مرحله بعد)
-    const sheetUrl = https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pubhtml;
+    const sheetUrl = https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?output=csv;
 
     fetch(sheetUrl)
       .then(res => res.text())
