--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   </style>
 </head>
 <body>
-  <h1>🏐 جدول رده‌بندی فوتسال و والیبال</h1>
+  <h1>⚽ جدول رده‌بندی فوتسال</h1>
   <table id="rankingTable">
     <tr><th>تیم</th><th>بازی</th><th>برد</th><th>باخت</th><th>امتیاز</th></tr>
   </table>
 
   <script>
-    // لینک داده‌ها از Google Sheets (توضیحش در مرحله بعد)
+    
     const sheetUrl = https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?output=csv;
 
     fetch(sheetUrl)
