--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>جدول رده‌بندی، بازی‌ها و نتایج</title>
+  <title>جدول رده‌بندی، نتایج و بازیکنان مؤثر</title>
   <style>
     body {
       font-family: "Vazir", sans-serif;
@@ -21,10 +21,7 @@
     }
 
     table {
-      margin: 30px auto;
       border-collapse: collapse;
-      width: 90%;
-      max-width: 800px;
       background: white;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
       border-radius: 10px;
@@ -33,8 +30,9 @@
 
     th, td {
       border: 1px solid #ccc;
-      padding: 10px;
+      padding: 8px;
       text-align: center;
+      font-size: 13px;
     }
 
     th {
@@ -42,16 +40,17 @@
       color: white;
     }
 
-    tr:nth-child(even) { background: #f2f2f2; }
+    tr:nth-child(even) {
+      background: #f2f2f2;
+    }
 
-    td:last-child { font-weight: bold; }
-
+    /* بخش کارت‌ها */
     .card-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin: 40px auto 60px auto;
+      margin: 40px auto;
       max-width: 1000px;
     }
 
@@ -70,42 +69,40 @@
       box-shadow: 0 8px 15px rgba(0, 0, 0, 0.15);
     }
 
-    .teams {
-      font-size: 18px;
+    /* بازیکنان مؤثر */
+    .effective-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin: 50px auto;
+      max-width: 1000px;
+    }
+
+    .mini-table {
+      width: 300px;
+      background: #fff;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      overflow: hidden;
+    }
+
+    .mini-table caption {
+      background: #3f51b5;
+      color: white;
       font-weight: bold;
-      color: #3f51b5;
-      margin-bottom: 8px;
+      padding: 10px;
     }
 
-    .divider {
-      font-size: 20px;
-      margin: 0 6px;
-      color: #444;
+    .mini-table th, .mini-table td {
+      padding: 6px;
+      border: 1px solid #ddd;
     }
 
-    .match-info, .result-info {
-      font-size: 14px;
-      color: #555;
-      margin-top: 6px;
+    .mini-table th {
+      background: #f1f1f1;
     }
 
-    .emoji {
-      font-size: 16px;
-      margin-left: 5px;
-    }
-
-    .goal-scorer {
-      font-size: 13px;
-      margin-top: 6px;
-      color: #333;
-      text-align: right;
-      line-height: 1.6;
-    }
-
-    .cards {
-      margin-top: 6px;
-      font-size: 18px;
-    }
   </style>
 </head>
 <body>
@@ -118,98 +115,72 @@
   <h2>🏆 نتایج بازی‌ها</h2>
   <div id="results" class="card-container"></div>
 
+  <h2>🌟 بازیکنان مؤثر</h2>
+  <div class="effective-container">
+    <table id="topScorers" class="mini-table">
+      <caption>گل‌زنان برتر</caption>
+      <thead><tr><th>بازیکن</th><th>تیم</th><th>گل</th></tr></thead>
+      <tbody></tbody>
+    </table>
+
+    <table id="topAssist" class="mini-table">
+      <caption>پاسورهای برتر</caption>
+      <thead><tr><th>بازیکن</th><th>تیم</th><th>پاس گل</th></tr></thead>
+      <tbody></tbody>
+    </table>
+
+    <table id="topMVP" class="mini-table">
+      <caption>بازیکنان مؤثر</caption>
+      <thead><tr><th>بازیکن</th><th>تیم</th><th>پست</th><th>رکورد</th></tr></thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
   <script>
-    /* 📊 جدول رده‌بندی */
-    const rankingUrl =
-      "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=0&single=true&output=csv";
+    /* 📊 لینک‌ها */
+    const rankingUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=0&single=true&output=csv";
+    const matchesUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-XXXXXXXXXX/pub?gid=1831919756&single=true&output=csv";
+    const resultsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv";
+    const effectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=99452363&single=true&output=csv"; 
 
-    fetch(rankingUrl)
-      .then((res) => res.text())
-      .then((csv) => {
-        const rows = csv.trim().split("\n").map((r) => r.split(","));
-        const table = document.getElementById("rankingTable");
+    /* 🎯 بازیکنان مؤثر */
+    fetch(effectiveUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const scorers = [], assist = [], mvp = [];
 
-        rows.forEach((row, i) => {
+        rows.forEach(r => {
+          const type = r[0].trim();
+          if (type === "گلزن") scorers.push(r);
+          else if (type === "پاسور") assist.push(r);
+          else if (type === "موثر") mvp.push(r);
+        });
+
+        // جدول گل‌زنان
+        const scorersBody = document.querySelector("#topScorers tbody");
+        scorers.slice(0, 3).forEach(r => {
           const tr = document.createElement("tr");
-          row.forEach((cell) => {
-            const el = document.createElement(i === 0 ? "th" : "td");
-            el.textContent = cell.trim();
-            tr.appendChild(el);
-          });
+          tr.innerHTML = `<td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td>`;
+          scorersBody.appendChild(tr);
+        });
 
-          if (i === 0) {
-            const th = document.createElement("th");
-            th.textContent = "وضعیت";
-            tr.appendChild(th);
-          } else if (i === 1 || i === 2) {
-            tr.style.backgroundColor = "#d4edda";
-            const td = document.createElement("td");
-            td.textContent = "صعودکننده";
-            tr.appendChild(td);
-          } else if (i === 3) {
-            tr.style.backgroundColor = "#fff3cd";
-            const td = document.createElement("td");
-            td.textContent = "تعقیب‌کننده";
-            tr.appendChild(td);
-          } else {
-            const td = document.createElement("td");
-            td.textContent = "-";
-            tr.appendChild(td);
-          }
+        // جدول پاسورها
+        const assistBody = document.querySelector("#topAssist tbody");
+        assist.slice(0, 3).forEach(r => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `<td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td>`;
+          assistBody.appendChild(tr);
+        });
 
-          table.appendChild(tr);
+        // جدول مؤثرترین‌ها
+        const mvpBody = document.querySelector("#topMVP tbody");
+        mvp.slice(0, 3).forEach(r => {
+          const tr = document.createElement("tr");
+          tr.innerHTML = `<td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td>${r[4]}</td>`;
+          mvpBody.appendChild(tr);
         });
       });
-
-    /* 🗓 بازی‌های آینده */
-    const matchesUrl =
-      "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1831919756&single=true&output=csv";
-
-    fetch(matchesUrl)
-      .then((res) => res.text())
-      .then((csv) => {
-        const rows = csv.trim().split("\n").map((r) => r.split(","));
-        const container = document.getElementById("matches");
-
-        for (let i = 1; i < rows.length; i++) {
-          const [team1, team2, date, time] = rows[i];
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <div class="teams">${team1.trim()} <span class="divider">⚽</span> ${team2.trim()}</div>
-            <div class="match-info"><span class="emoji">📅</span> ${date.trim()}</div>
-            <div class="match-info"><span class="emoji">⏰</span> ${time.trim()}</div>
-          `;
-          container.appendChild(card);
-        }
-      });
-
-    /* 🏆 نتایج بازی‌ها */
-    const resultsUrl =
-      "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv"; // لینک CSV مخصوص شیت نتایج
-
-    fetch(resultsUrl)
-      .then((res) => res.text())
-      .then((csv) => {
-        const rows = csv.trim().split("\n").map((r) => r.split(","));
-        const container = document.getElementById("results");
-
-        for (let i = 1; i < rows.length; i++) {
-          const [team1, score1, score2, team2, scorers1, scorers2, cards1, cards2] = rows[i];
-
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <div class="teams">${team1.trim()} ${score1.trim()} <span class="divider">⚽</span> ${score2.trim()} ${team2.trim()}</div>
-            <div class="result-info goal-scorer"><b>${team1.trim()}:</b> ${scorers1 || "-"}</div>
-            ${cards1 ? `<div class="cards">${cards1.trim()}</div>` : ""}
-            <div class="result-info goal-scorer"><b>${team2.trim()}:</b> ${scorers2 || "-"}</div>
-            ${cards2 ? `<div class="cards">${cards2.trim()}</div>` : ""}
-          `;
-          container.appendChild(card);
-        }
-      })
-      .catch((err) => console.error("خطا در دریافت نتایج:", err));
   </script>
 </body>
 </html>
