--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>جدول رده‌بندی، بازی‌ها و بازیکنان مؤثر</title>
+  <title>جدول رده‌بندی و مسابقات فوتسال</title>
   <style>
     body {
       font-family: "Vazir", sans-serif;
@@ -20,7 +20,7 @@
       color: #222;
     }
 
-    /* جدول اصلی رده‌بندی */
+    /* جدول رده‌بندی */
     table {
       margin: 30px auto;
       border-collapse: collapse;
@@ -158,7 +158,7 @@
   <h1>⚽ جدول رده‌بندی فوتسال</h1>
   <table id="rankingTable"></table>
 
-  <h2>📆 بازی‌های آینده</h2>
+  <h2>📅 بازی‌های آینده</h2>
   <div id="matches" class="card-container"></div>
 
   <h2>🏆 نتایج بازی‌ها</h2>
@@ -192,7 +192,87 @@
     const resultsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv";
     const effectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=99452363&single=true&output=csv"; 
 
-    /* 🎯 جدول بازیکنان مؤثر */
+    /* 📊 جدول رده‌بندی */
+    fetch(rankingUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const table = document.getElementById("rankingTable");
+
+        rows.forEach((row, i) => {
+          const tr = document.createElement("tr");
+          row.forEach(cell => {
+            const el = document.createElement(i === 0 ? "th" : "td");
+            el.textContent = cell.trim();
+            tr.appendChild(el);
+          });
+
+          if (i === 0) {
+            const th = document.createElement("th");
+            th.textContent = "وضعیت";
+            tr.appendChild(th);
+          } else if (i === 1 || i === 2) {
+            tr.style.backgroundColor = "#d4edda";
+            const td = document.createElement("td");
+            td.textContent = "صعودکننده";
+            tr.appendChild(td);
+          } else if (i === 3) {
+            tr.style.backgroundColor = "#fff3cd";
+            const td = document.createElement("td");
+            td.textContent = "تعقیب‌کننده";
+            tr.appendChild(td);
+          } else {
+            const td = document.createElement("td");
+            td.textContent = "-";
+            tr.appendChild(td);
+          }
+          table.appendChild(tr);
+        });
+      });
+
+    /* 🗓 بازی‌های آینده */
+    fetch(matchesUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const container = document.getElementById("matches");
+
+        for (let i = 1; i < rows.length; i++) {
+          const [team1, team2, date, time] = rows[i];
+          const card = document.createElement("div");
+          card.className = "card";
+          card.innerHTML = `
+            <div class="teams">${team1.trim()} <span class="divider">⚽</span> ${team2.trim()}</div>
+            <div class="match-info"><span class="emoji">📅</span> ${date.trim()}</div>
+            <div class="match-info"><span class="emoji">⏰</span> ${time.trim()}</div>
+          `;
+          container.appendChild(card);
+        }
+      });
+
+    /* 🏆 نتایج بازی‌ها */
+    fetch(resultsUrl)
+      .then(res => res.text())
+      .then(csv => {
+        const rows = csv.trim().split("\n").map(r => r.split(","));
+        const container = document.getElementById("results");
+
+        for (let i = 1; i < rows.length; i++) {
+          const [team1, score1, score2, team2, scorers1, scorers2, cards1, cards2] = rows[i];
+          const card = document.createElement("div");
+          card.className = "card";
+          card.innerHTML = `
+            <div class="teams">${team1.trim()} ${score1.trim()} <span class="divider">⚽</span> ${score2.trim()} ${team2.trim()}</div>
+            <div class="result-info goal-scorer"><b>${team1.trim()}:</b> ${scorers1 || "-"}</div>
+            ${cards1 ? `<div class="cards">${cards1.trim()}</div>` : ""}
+            <div class="result-info goal-scorer"><b>${team2.trim()}:</b> ${scorers2 || "-"}</div>
+            ${cards2 ? `<div class="cards">${cards2.trim()}</div>` : ""}
+          `;
+          container.appendChild(card);
+        }
+      });
+
+    /* 🌟 بازیکنان مؤثر */
     fetch(effectiveUrl)
       .then(res => res.text())
       .then(csv => {
@@ -227,8 +307,6 @@
           mvpBody.appendChild(tr);
         });
       });
-
-    /* سایر بخش‌ها مثل قبل: جدول، بازی‌ها و نتایج (در همین فایل نگه‌دار) */
   </script>
 </body>
 </html>
